src/components/Tabs/components/TabList/TabList.module.css
.TabList {
  display: inline-flex;
  list-style: none;
  margin: 0;
  padding: 0;
}

.TabListItem {
  background: lightgray;
  border-color: lightgray;
  border-radius: 5px 5px 0 0;
  border-style: solid;
  border-width: 1px 1px 0 1px;
  cursor: pointer;
  padding: 10px 20px;
  z-index: 0;
}

.TabListItem + .TabListItem {
  margin-left: 10px;
}

.TabListItem.selected {
  background: white;
  box-shadow: 0 2px 0 -1px white;
  border-color: lightgray;
  z-index: 1;
}

.TabListItem.disabled {
  pointer-events: none;
  opacity: 0.5;
}

